[package]
name = "RustChainIndexer"
version = "0.1.0"
authors = ["jongwhan"]
edition = "2018"

[dependencies]
prost = "0.6.1"                                                                                       
tonic = {version="0.2.0",features = ["tls"]}                                                          
tokio = {version="0.2.18",features = ["stream", "macros"]}                                            
futures = "0.3"

[build-dependencies]                                                                                  
tonic-build = "0.3.1"
