[package]
name = "RustChainIndexer"
version = "0.1.0"
authors = ["jongwhan"]
edition = "2018"

[dependencies]
tower = "0.3"
http = "0.2"
http-body = "0.3"
prost-types = "0.6"
prost = "0.6.1"                                                                                       
tonic = {version="0.2.0",features = ["tls"]}                                                          

tokio = { version = "0.2", features = ["full"]  }                                        
futures = "0.3"

[build-dependencies]                                                                                  
tonic-build = "0.3.1"
